# vlm-checklist-lite

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-ci.yml
examples/: dev_split.jsonl
scripts/: run_demo.py
tests/: test_metrics.py
vlm_checklist_lite/: __init__.py  evaluator.py  metrics.py  report.py
