[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-checklist-lite"
version = "0.1.0"
description = "Capability-first evaluation toolkit for vision-language models"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "easy live" }
]
dependencies = []

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]
dev = ["pytest>=8.0", "matplotlib>=3.8"]

[tool.setuptools.packages.find]
include = ["vlm_checklist_lite*"]
